add vente.html + css add location.html + css

--- a/club_auto/index.html
+++ b/club_auto/index.html
@@ -125,11 +125,11 @@
             amet.
           </p>
           <ul>
-            <li>Lorem ipsum dolor sit amet</li>
-            <li>Lorem ipsum dolor sit amet</li>
-            <li>Lorem ipsum dolor sit amet</li>
-            <li>Lorem ipsum dolor sit amet</li>
-            <li>Lorem ipsum dolor sit amet</li>
+            <li class="puces">Lorem ipsum dolor sit amet</li>
+            <li class="puces">Lorem ipsum dolor sit amet</li>
+            <li class="puces">Lorem ipsum dolor sit amet</li>
+            <li class="puces">Lorem ipsum dolor sit amet</li>
+            <li class="puces">Lorem ipsum dolor sit amet</li>
           </ul>
         </div>
         <div class="content">
