--- a/club_auto/vente.html
+++ b/club_auto/vente.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="brandBtn">
-        <div class="brand">CLUB AUTO</div>
+        <div class="brand"><a href="index.html">CLUB AUTO</a></div>
         <button type="button" id="hamMenu"></button>
       </div>
       <div class="adresse">
