--- a/club_auto/vente.html
+++ b/club_auto/vente.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="automobile, vente, location" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="automobile, vente, location">
     <title>CLUB AUTO - Le meilleur de l'automobile</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/contact.css" />
-    <link rel="stylesheet" href="./css/vente.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/vente.css">
+    <!-- ajout CDN Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    >
     <script src="./js/script.js" defer></script>
   </head>
   <body>
     <header>
       <div class="brandBtn">
         <div class="brand"><a href="index.html">CLUB AUTO</a></div>
+        <!-- bouton menu hamburger (interactif avec JS) pour smartphone -->
         <button type="button" id="hamMenu"></button>
       </div>
       <div class="adresse">
-        <img
-          class="icone"
-          src="./images/icone-adresse.png"
-          alt="icone d'adresse"
-        />
+        <img class="icone" src="./images/icone-adresse.png" alt="icone d'adresse">
         <address>
-          <span class="textOrange">ADRESSE:</span><br />AVENUE CHARLES DE GAULLE
-          <br />75000 PARIS
+          <span class="textOrange">ADRESSE:</span><br>AVENUE CHARLES DE GAULLE<br>75000 PARIS
         </address>
       </div>
       <div class="telephone">
-        <img
-          class="icone"
-          src="./images/icon-telephone.png"
-          alt="icone téléphone"
-        />
+        <img class="icone" src="./images/icon-telephone.png" alt="icone téléphone">
         <div>
-          <span class="textOrange">TELEPHONE: </span><br /><strong
-            >01 23 45 67 89</strong
-          >
+          <span class="textOrange">TELEPHONE: </span><br><strong>01 23 45 67 89</strong>
         </div>
       </div>
       <div class="horaires">
-        <span class="textOrange">OUVERTURE: </span
-        ><strong>Du Lundi au Samedi</strong><br />
+        <span class="textOrange">OUVERTURE: </span><strong>Du Lundi au Samedi</strong><br>
         <span class="textOrange">HORAIRES: </span><strong>De 9h à 17h</strong>
       </div>
       <div class="rs">
         <a target="_blank" href="https://www.facebook.com/">
-          <img class="logoRs" src="./images/logoFB.jpg" alt="logo facebook" />
+          <img class="logoRs" src="./images/logoFB.jpg" alt="logo facebook">
         </a>
         <a target="_blank" href="https://x.com/">
-          <img class="logoRs" src="./images/logoX.jpg" alt="logo X" />
+          <img class="logoRs" src="./images/logoX.jpg" alt="logo X">
         </a>
       </div>
     </header>
@@ -66,20 +56,17 @@
       <a href="contact.html">CONTACT</a>
     </nav>
     <main>
+      <!-- fil d'arianne -->
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
           <li class="breadcrumb-item"><a href="vente.html">Vente</a></li>
           <li class="breadcrumb-item active">BMW 535i, NAVI, LEATHER, ABS</li>
         </ol>
-        <hr class="breadcrumbLign" />
+        <hr class="breadcrumbLign">
       </nav>
       <h1>BMW 535i, Navi, Leather, ABS</h1>
-      <img
-        class="img-fluid imgDesc"
-        src="./images/vehicule2.jpg"
-        alt="image de voiture"
-      />
+      <img class="img-fluid imgDesc" src="./images/vehicule2.jpg" alt="image de voiture">
       <nav class="navDesc">
         <a class="linkActive" href="#">DESCRIPTION</a>
         <a href="#">TECHNIQUE</a>
@@ -139,7 +126,7 @@
           <h4>HORAIRES D'OUVERTURE</h4>
           <p>
             <strong>
-              Lundi - Samedi : 09:00-17:00<br />
+              Lundi - Samedi : 09:00-17:00<br>
               Dimanche et jours fériés : Fermé
             </strong>
           </p>
@@ -147,18 +134,13 @@
         <div class="footBlock">
           <h4>NEWSLETTER</h4>
           <div>
-            <input
-              type="email"
-              name="mail"
-              id="mail"
-              placeholder="Entrez votre email"
-            />
+            <input type="email" name="mail" id="mail" placeholder="Entrez votre email">
             <button id="rssBtn">
-              <img class="rss" src="./images/logoRss.jpg" alt="logo flux rss" />
+              <img class="rss" src="./images/logoRss.jpg" alt="logo flux rss">
             </button>
           </div>
           <p>
-            Inscrivez-vous pour recevoir les<br />
+            Inscrivez-vous pour recevoir les<br>
             dernières offres
           </p>
         </div>
@@ -166,35 +148,19 @@
           <h4>RESEAUX SOCIAUX</h4>
           <div class="flexRs">
             <a target="_blank" href="https://www.facebook.com/">
-              <img
-                class="icone"
-                src="./images/logoFB.jpg"
-                alt="logo Facebook"
-              />
+              <img class="icone" src="./images/logoFB.jpg" alt="logo Facebook">
             </a>
             <a target="_blank" href="https://www.x.com/">
-              <img class="icone" src="./images/logoX.jpg" alt="logo x" />
+              <img class="icone" src="./images/logoX.jpg" alt="logo x">
             </a>
             <a target="_blank" href="https://www.instagram.com/">
-              <img
-                class="icone"
-                src="./images/logoInsta.jpg"
-                alt="logo Instagram"
-              />
+              <img class="icone" src="./images/logoInsta.jpg" alt="logo Instagram">
             </a>
             <a target="_blank" href="https://www.google.fr/">
-              <img
-                class="icone"
-                src="./images/logoGoogle.jpg"
-                alt="logo Google+"
-              />
+              <img class="icone" src="./images/logoGoogle.jpg" alt="logo Google+">
             </a>
             <a target="_blank" href="https://www.youtube.com/">
-              <img
-                class="icone"
-                src="./images/logoYoutube.jpg"
-                alt="logo Youtube"
-              />
+              <img class="icone" src="./images/logoYoutube.jpg" alt="logo Youtube">
             </a>
           </div>
         </div>
